package Paquete;

public class Asistente {
}
