package Paquete;

public class Bitacora {
}
