package Paquete;
public class Nave {
}
