package Paquete;

public class Sistema {
}
